tests/build/enum_from.stderr
error: Deriving enums is not supported
 --> $DIR/enum_from.rs:4:5
  |
4 | pub enum Nothing {
  |     ^^^^
